--- a/starter/package.json
+++ b/starter/package.json
@@ -4,11 +4,18 @@
   "description": "Landing page for natours",
   "main": "index.js",
   "scripts": {
-    "compile:sass": "node-sass sass/main.scss css/style.css -w"
+    "compile:sass": "node-sass sass/main.scss css/style.css -w",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "author": "",
   "license": "ISC",
+  "homepage": "https://mchh528.github.io/Natours",
   "devDependencies": {
+    "gh-pages": "^3.2.3",
     "node-sass": "^6.0.1"
+  },
+  "dependencies": {
+    "build": "^0.1.4"
   }
 }
