--- a/starter/package.json
+++ b/starter/package.json
@@ -4,14 +4,11 @@
   "description": "Landing page for natours",
   "main": "index.js",
   "scripts": {
-    "compile:sass": "node-sass sass/main.scss css/style.css -w",
-    "deploy": "gh-pages -d dist"
+    "compile:sass": "node-sass sass/main.scss css/style.css -w"
   },
   "author": "",
   "license": "ISC",
-  "homepage": "https://mchh528.github.io/Natours",
   "devDependencies": {
-    "gh-pages": "^3.2.3",
     "node-sass": "^6.0.1"
   },
   "dependencies": {
